--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="%PUBLIC_URL%/config/theme.css" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+  
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cash Bears Mint Page</title>
-    <meta name="description" content="Mint your Cash Bears NFT" />
+    <title>I'm Tired | Fuck Crypto!</title>
+    <meta name="description" content="Fuck This Bear Market" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
